--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="lightWhite">#F5F5F5</color>
     <color name="darkBlue">#1e3254</color>
     <color name="lavender">#8692f7</color>
+    <color name="light_gray">#EEEEEE</color>
 </resources>
