--- a/android/app/src/main/res/layout/item_topic.xml
+++ b/android/app/src/main/res/layout/item_topic.xml
@@ -81,6 +81,12 @@
                 expandableTextView:textMode="line"
                 app:expandType="layout"
                 android:text="Content" />
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPagerImages"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_marginTop="8dp"
+                android:visibility="gone"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
