--- a/android/app/src/main/res/layout/item_topic.xml
+++ b/android/app/src/main/res/layout/item_topic.xml
@@ -93,18 +93,43 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:id="@+id/btnLike"
+                        android:src="@drawable/love_unclick"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"/>
+                    <TextView
+                        android:layout_marginStart="10dp"
+                        android:id="@+id/tvLikeCount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="hello" />
+                </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/btnLike"
-                    android:src="@drawable/love_unclick"
-                    android:layout_width="wrap_content"
+                <LinearLayout
                     android:layout_weight="1"
-                    android:layout_height="match_parent"/>
-                <ImageView
-                    android:src="@drawable/ic_comment"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:src="@drawable/ic_comment"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"/>
+                    <TextView
+                        android:layout_marginStart="10dp"
+                        android:id="@+id/tvReplyCount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="hello" />
+                </LinearLayout>
+
             </LinearLayout>
         </LinearLayout>
         <View
