--- a/android/app/src/main/res/layout/item_topic.xml
+++ b/android/app/src/main/res/layout/item_topic.xml
@@ -119,6 +119,7 @@
                     android:layout_marginTop="5dp"
                     android:orientation="horizontal">
                     <ImageView
+                        android:id="@+id/btnReply"
                         android:src="@drawable/ic_comment"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"/>
