add: paging parent reply

--- a/android/app/src/main/res/layout/fragment_reply_bottom_sheet.xml
+++ b/android/app/src/main/res/layout/fragment_reply_bottom_sheet.xml
@@ -10,14 +10,16 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerReplies"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="10dp"
         android:layout_weight="1"
-        android:padding="8dp" />
+        android:padding="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/layoutSendReply"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <LinearLayout
         android:visibility="gone"
@@ -45,6 +47,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/layoutSendReply"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
