--- a/android/app/src/main/res/layout/item_reply.xml
+++ b/android/app/src/main/res/layout/item_reply.xml
@@ -30,7 +30,7 @@
             app:expandType="layout"/>
         <io.github.glailton.expandabletextview.ExpandableTextView
             android:id="@+id/tvContent"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:text="content"
             android:textColor="#555555"
             android:layout_width="wrap_content"
@@ -41,18 +41,14 @@
             expandableTextView:readLessText="thu gọn"
             expandableTextView:textMode="line"
             app:expandType="layout"/>
-        <io.github.glailton.expandabletextview.ExpandableTextView
+        <TextView
             android:id="@+id/tvReply"
             android:textSize="14sp"
             android:text="trả lời"
+            android:layout_marginTop="3dp"
             android:textColor="@color/gray"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            expandableTextView:collapsedLines="3"
-            expandableTextView:animDuration="500"
-            expandableTextView:readMoreText="xem thêm"
-            expandableTextView:readLessText="thu gọn"
-            expandableTextView:textMode="line"
-            app:expandType="layout"/>
+            />
     </LinearLayout>
 </LinearLayout>
