--- a/android/app/src/main/res/layout/item_reply.xml
+++ b/android/app/src/main/res/layout/item_reply.xml
@@ -5,6 +5,7 @@
     xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content">
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imgAvatar"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/logoute"
