--- a/android/app/src/main/res/drawable/notification.xml
+++ b/android/app/src/main/res/drawable/notification.xml
@@ -1,15 +1,11 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:alpha="0.84" android:height="24dp" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
       
-    <group>
-            
-        <clip-path android:pathData="M0,0h24v24h-24z"/>
-            
-        <path android:fillColor="#00000000" android:pathData="M6,19V10C6,6.686 8.686,4 12,4V4C15.314,4 18,6.686 18,10V19M6,19H18M6,19H4M18,19H20" android:strokeColor="#292929" android:strokeLineCap="round" android:strokeLineJoin="round" android:strokeWidth="2.5"/>
-            
-        <path android:fillColor="#00000000" android:pathData="M11,22L13,22" android:strokeColor="#292929" android:strokeLineCap="round" android:strokeLineJoin="round" android:strokeWidth="2.5"/>
-            
-        <path android:fillColor="#00000000" android:pathData="M12,3m-1,0a1,1 0,1 1,2 0a1,1 0,1 1,-2 0" android:strokeColor="#292929" android:strokeWidth="2.5"/>
-          
-    </group>
+    <path android:fillColor="#00000000" android:pathData="M19,5m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0" android:strokeColor="#000000" android:strokeWidth="1.9200000000000004"/>
+      
+    <path android:fillColor="#00000000" android:pathData="M7,14H16" android:strokeColor="#000000" android:strokeLineCap="round" android:strokeWidth="1.9200000000000004"/>
+      
+    <path android:fillColor="#00000000" android:pathData="M7,17.5H13" android:strokeColor="#000000" android:strokeLineCap="round" android:strokeWidth="1.9200000000000004"/>
+      
+    <path android:fillColor="#00000000" android:pathData="M2,12C2,16.714 2,19.071 3.464,20.535C4.929,22 7.286,22 12,22C16.714,22 19.071,22 20.535,20.535C22,19.071 22,16.714 22,12V10.5M13.5,2H12C7.286,2 4.929,2 3.464,3.464C2.491,4.438 2.164,5.807 2.055,8" android:strokeColor="#000000" android:strokeLineCap="round" android:strokeWidth="1.9200000000000004"/>
     
 </vector>
