--- a/android/app/src/main/res/layout/activity_user_home.xml
+++ b/android/app/src/main/res/layout/activity_user_home.xml
@@ -25,5 +25,6 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_nav_menu"
+        app:itemIconTint="@null"
         app:labelVisibilityMode="unlabeled"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
