--- a/android/app/src/main/res/layout/activity_register.xml
+++ b/android/app/src/main/res/layout/activity_register.xml
@@ -72,6 +72,9 @@
         android:layout_below="@id/layout_header"
         android:layout_marginTop="10dp"
         app:cardCornerRadius="12dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:padding="16dp"
         app:cardElevation="6dp"
         app:layout_constraintTop_toBottomOf="@id/layout_header"
         app:layout_constraintStart_toStartOf="parent"
