--- a/android/app/src/main/res/layout/fragment_bottom_sheet_edit_user_dialog.xml
+++ b/android/app/src/main/res/layout/fragment_bottom_sheet_edit_user_dialog.xml
@@ -15,6 +15,7 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="16dp"
             android:src="@drawable/iconclose"
             android:id="@+id/imgClose" />
 
