--- a/android/app/src/main/res/layout/fragment_otp_password_bottom_sheet.xml
+++ b/android/app/src/main/res/layout/fragment_otp_password_bottom_sheet.xml
@@ -9,13 +9,11 @@
     >
 
     <ImageView
-        android:id="@+id/img_Iconclose"
+        android:id="@+id/img_backEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/iconclose"
-        android:padding="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
+        android:src="@drawable/icon_arrowback"
+        android:padding="16dp"
         android:layout_alignParentStart="true"/>
     <ImageView
         android:layout_width="120dp"
