--- a/android/app/src/main/res/layout/fragment_change_password.xml
+++ b/android/app/src/main/res/layout/fragment_change_password.xml
@@ -90,6 +90,7 @@
         android:background="@drawable/coner_circle"
         android:backgroundTint="@color/blue"/>
     <TextView
+        android:id="@+id/textExit"
         android:layout_width="220dp"
         android:layout_height="fill_parent"
         android:layout_gravity="center"
