--- a/android/app/src/main/res/layout/activity_forgot_password_otpactivity.xml
+++ b/android/app/src/main/res/layout/activity_forgot_password_otpactivity.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="30dp"
     android:descendantFocusability="beforeDescendants"
     android:orientation="vertical"
     >
@@ -14,11 +14,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/icon_arrowback"
-        android:padding="16dp"
         android:focusableInTouchMode="false"
         android:clickable="true"
         android:focusable="false"
-        android:layout_alignParentStart="true"/>
+        android:padding="16dp"
+       />
     <ImageView
         android:layout_width="120dp"
         android:layout_height="120dp"
