--- a/android/app/src/main/res/layout/activity_new_password.xml
+++ b/android/app/src/main/res/layout/activity_new_password.xml
@@ -7,12 +7,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_marginTop="30dp"
-
     android:background="@color/white"
     >
 
     <ImageView
-        android:id="@+id/imgBackLogin"
+        android:id="@+id/imgBackOTP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/icon_arrowback"
@@ -20,20 +19,20 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_alignParentStart="true"/>
-    
+
     <ImageView
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
         app:tint="@color/blue"
-        android:src="@drawable/baseline_lock_24"/>
+        android:src="@drawable/baseline_lock_open_24"/>
     <TextView
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="8dp"
-        android:text="Quên Mật Khẩu"
+        android:text="Đổi Mật Khẩu"
         android:textStyle="bold"
         android:textSize="25sp"
         android:gravity="center"
@@ -45,37 +44,43 @@
         android:layout_marginTop="8dp"
         android:layout_marginRight="16dp"
         android:layout_marginLeft="16dp"
-        android:text="Chúng ta cần nhập email để gửi mã OTP để bạn xác thực và đổi mật khẩu"
+        android:text="Nhập mật khẩu mới gì chưa người đẹp"
         android:gravity="center"
         />
     <EditText
-        android:id="@+id/edt_username"
+        android:id="@+id/newPassword"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/customedt"
-        android:hint="Nhập tên đăng nhập của bạn"
+        android:hint="Nhập mật khẩu mới"
         android:paddingLeft="16dp"
-        android:drawableLeft="@drawable/baseline_person_24"
+        android:drawableLeft="@drawable/baseline_lock_24"
+        android:drawableRight="@drawable/baseline_remove_red_eye_24"
+        android:paddingRight="16dp"
+        android:inputType="textPassword"
         android:drawablePadding="16dp"
         android:textColorHint="@color/black"/>
     <EditText
-        android:id="@+id/edt_email"
+        android:id="@+id/confirmNewPassword"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/customedt"
-        android:hint="Nhập Email của bạn"
+        android:inputType="textPassword"
+        android:hint="Xác nhận mật khẩu mới"
         android:paddingLeft="16dp"
-        android:drawableLeft="@drawable/iconemail"
+        android:drawableLeft="@drawable/baseline_lock_open_24"
+        android:drawableRight="@drawable/baseline_remove_red_eye_24"
+        android:paddingRight="16dp"
         android:drawablePadding="16dp"
         android:textColorHint="@color/black"/>
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_switchOTP"
+        android:id="@+id/btnResetPassword"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
@@ -86,16 +91,18 @@
         android:background="@drawable/coner_circle"
         android:backgroundTint="@color/blue"/>
     <TextView
-        android:id="@+id/switchLogin"
         android:layout_width="220dp"
         android:layout_height="fill_parent"
         android:layout_gravity="center"
         android:layout_marginTop="8dp"
-        android:text="Trở lại trang đăng nhập"
+        android:text="Thoát"
+        android:id="@+id/textExit"
         android:textSize="20sp"
         android:layout_marginBottom="16dp"
         android:textColor="@color/blue"
         android:textStyle="bold"
         android:gravity="bottom|center"
         />
+
+
 </LinearLayout>
