--- a/android/app/src/main/res/layout/fragment_change_password_bottom_sheet.xml
+++ b/android/app/src/main/res/layout/fragment_change_password_bottom_sheet.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="8dp"
-        android:text="Quên Mật Khẩu"
+        android:text="Đổi Mật Khẩu"
         android:textStyle="bold"
         android:textSize="25sp"
         android:gravity="center"
@@ -66,16 +66,4 @@
         android:text="Xác nhận"
         android:background="@drawable/coner_circle"
         android:backgroundTint="@color/blue"/>
-    <TextView
-        android:layout_width="220dp"
-        android:layout_height="fill_parent"
-        android:layout_gravity="center"
-        android:layout_marginTop="8dp"
-        android:text="Trở lại trang đăng nhập"
-        android:textSize="20sp"
-        android:layout_marginBottom="16dp"
-        android:textColor="@color/blue"
-        android:textStyle="bold"
-        android:gravity="bottom|center"
-        />
 </LinearLayout>
