--- a/android/app/src/main/res/layout/fragment_reply_bottom_sheet.xml
+++ b/android/app/src/main/res/layout/fragment_reply_bottom_sheet.xml
@@ -46,6 +46,17 @@
 
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/btnCancel"
+        android:visibility="gone"
+        android:src="@drawable/ic_cancel"
+        android:layout_marginEnd="50dp"
+        android:text="huỷ trả lời"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/layoutSendReply"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerReplies" />
     <LinearLayout
         android:id="@+id/layoutSendReply"
         android:layout_width="match_parent"
