--- a/android/app/src/main/res/layout/item_reply_child.xml
+++ b/android/app/src/main/res/layout/item_reply_child.xml
@@ -29,19 +29,32 @@
             expandableTextView:readLessText="thu gọn"
             expandableTextView:textMode="line"
             app:expandType="layout"/>
-        <io.github.glailton.expandabletextview.ExpandableTextView
-            android:id="@+id/tvContent"
-            android:textSize="16sp"
-            android:text="content"
-            android:textColor="#555555"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/tvTargetUserName"
+                android:textSize="16sp"
+                android:text="content"
+                android:textColor="@color/blue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/tvContent"
+                android:textSize="16sp"
+                android:text="content"
+                android:textColor="#555555"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <TextView
+            android:id="@+id/tvToggle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            expandableTextView:collapsedLines="3"
-            expandableTextView:animDuration="500"
-            expandableTextView:readMoreText="xem thêm"
-            expandableTextView:readLessText="thu gọn"
-            expandableTextView:textMode="line"/>
-
+            android:text="Xem thêm"
+            android:textSize="12sp"
+            android:textColor="@color/gray"
+            android:visibility="gone" />
 
         <LinearLayout
             android:layout_width="match_parent"
