--- a/android/app/src/main/res/values/style.xml
+++ b/android/app/src/main/res/values/style.xml
@@ -1,3 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="ButtonShape" parent="ShapeAppearance.MaterialComponents.SmallComponent">
+        <item name="cornerSize">20dp</item>
+    </style>
 </resources>
