--- a/android/app/src/main/res/layout/fragment_notification.xml
+++ b/android/app/src/main/res/layout/fragment_notification.xml
@@ -26,7 +26,8 @@
         app:layout_constraintVertical_bias="0"
         app:layout_constraintBottom_toTopOf="@+id/btnMoreNoti"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="0dp"
+        />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnMoreNoti"
