--- a/android/app/src/main/res/layout/fragment_follow.xml
+++ b/android/app/src/main/res/layout/fragment_follow.xml
@@ -8,6 +8,7 @@
 
     <!-- Header -->
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -25,7 +26,7 @@
 
         <!-- Tên người dùng -->
         <TextView
-            android:id="@+id/tvFullname"
+            android:id="@+id/tvUsername"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
