--- a/android/app/src/main/res/layout/fragment_profile_any_user.xml
+++ b/android/app/src/main/res/layout/fragment_profile_any_user.xml
@@ -59,21 +59,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/headerLayout" />
 
-    <ImageButton
-        android:id="@+id/coverCameraButton"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/circle_button_background"
-        android:contentDescription="Camera"
-        android:elevation="4dp"
-        android:padding="12dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/ic_camera"
-        app:layout_constraintBottom_toBottomOf="@+id/coverPhoto"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgAvatar"
@@ -87,16 +72,16 @@
         tools:ignore="MissingConstraints" />
 
     <ImageButton
-        android:id="@+id/uploadAvatar"
+        android:id="@+id/btnFollow"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginEnd="-15dp"
         android:background="@drawable/circle_button_background"
-        android:contentDescription="Camera"
+        android:contentDescription="Add"
         android:elevation="4dp"
         android:padding="10dp"
         android:scaleType="centerInside"
-        android:src="@drawable/ic_camera"
+        android:src="@drawable/baseline_add_24"
         app:layout_constraintBottom_toBottomOf="@+id/imgAvatar"
         app:layout_constraintEnd_toEndOf="@+id/imgAvatar" />
 
@@ -104,8 +89,9 @@
         android:id="@+id/userInfoContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:orientation="horizontal"
-        android:padding="8dp"
         android:gravity="center_vertical"
         app:layout_constraintTop_toBottomOf="@+id/imgAvatar"
         app:layout_constraintStart_toStartOf="parent"
