edit: edit mapping for like

--- a/android/app/src/main/res/layout/activity_topic_detail.xml
+++ b/android/app/src/main/res/layout/activity_topic_detail.xml
@@ -176,7 +176,7 @@
                             android:id="@+id/tvReplyCount"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:text="hello" />
+                            android:text="0" />
                     </LinearLayout>
 
                 </LinearLayout>
