--- a/android/app/src/main/res/layout/activity_topic_post.xml
+++ b/android/app/src/main/res/layout/activity_topic_post.xml
@@ -5,8 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ui.activity.topic.TopicPostActivity">
-
     <TextView
         android:id="@+id/tvCancel"
         android:layout_width="wrap_content"
