--- a/android/app/src/main/res/layout/activity_verify_otpactivity.xml
+++ b/android/app/src/main/res/layout/activity_verify_otpactivity.xml
@@ -1,5 +1,6 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
