--- a/android/app/src/main/res/layout/fragment_follow.xml
+++ b/android/app/src/main/res/layout/fragment_follow.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent"
     tools:context=".ui.fragment.PersonFollowFragment">
 
@@ -58,6 +59,7 @@
 
             <!-- TabLayout -->
             <com.google.android.material.tabs.TabLayout
+                android:background="@color/white"
                 android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
