--- a/android/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/android/app/src/main/res/menu/bottom_nav_menu.xml
@@ -18,5 +18,10 @@
         android:title="Menu"
         android:icon="@drawable/baseline_density_medium_24"
         android:tint="#FFFFFF" /> <!-- Màu trắng cho icon Menu -->
+    <item
+        android:id="@+id/itemChatbot"
+        android:title="Menu"
+        android:icon="@drawable/ic_chat"
+        android:tint="#FFFFFF" /> <!-- Màu trắng cho icon Menu -->
 
 </menu>
