--- a/android/app/src/main/res/layout/fragment_profile_any_user.xml
+++ b/android/app/src/main/res/layout/fragment_profile_any_user.xml
@@ -171,7 +171,13 @@
                             android:textColor="#888888"
                             android:textSize="14sp"
                             android:gravity="center" />
+
                     </LinearLayout>
+                    <!-- Divider -->
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="40dp"
+                        android:background="#DDDDDD" />
                     <!-- Connection -->
                     <LinearLayout
                         android:id="@+id/following"
@@ -201,11 +207,7 @@
                             android:gravity="center" />
                     </LinearLayout>
 
-                    <!-- Divider -->
-                    <View
-                        android:layout_width="1dp"
-                        android:layout_height="40dp"
-                        android:background="#DDDDDD" />
+
 
                 </LinearLayout>
             </LinearLayout>
@@ -229,7 +231,7 @@
                     android:id="@+id/tabLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/white"
+                    android:background="@drawable/border_box"
                     app:tabIndicatorColor="@color/blue"
                     app:tabIndicatorFullWidth="true"
                     app:tabIndicatorHeight="2dp"
