--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -70,6 +70,7 @@
                 android:drawableLeft="@drawable/baseline_lock_24"
                 android:drawablePadding="8dp"
                 android:hint="Mật khẩu"
+                android:drawableRight="@drawable/baseline_remove_red_eye_24"
                 android:padding="8dp"
                 android:inputType="textPassword"
                 android:textColor="@color/black"
